--- a/UCBC 2024/Simulations/Bidding1S.ipynb
+++ b/UCBC 2024/Simulations/Bidding1S.ipynb
@@ -23,20 +23,20 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-3362000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-2082000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-950000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '2C', 'insta_score': 0.976}]"
+       "[{'call': '2C', 'insta_score': 0.741}]"
       ]
      },
      "execution_count": 2,
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '2H', 'insta_score': 0.493}]"
+       "[{'call': 'PASS', 'insta_score': 0.843}]"
       ]
      },
      "execution_count": 3,
@@ -153,16 +153,16 @@
      "output_type": "stream",
      "text": [
       "Good quality: True\n",
-      "xx.QJTx.AT8x.KTx KQ9xx.9xxx.Qxx.x A.8xx.Jxx.AQxxxx JT8xx.AK.K9x.J98 0.70\n",
-      "KQ8xx.K9xx.8x.T9 Jxxx.QT.KQxx.KJx A.8xx.Jxx.AQxxxx T9x.AJxx.AT9x.8x 0.75\n",
-      "KJx.QJ9x.Kxx.Jxx QT9xxx.AKx.T8.K8 A.8xx.Jxx.AQxxxx 8xx.Txx.AQ9xx.T9 0.75\n",
-      "9xxx.Q9x.9xxx.8x QJ8xx.AJx.KQx.Kx A.8xx.Jxx.AQxxxx KTx.KTxx.AT8.JT9 0.75\n",
-      "xxxx.J9xx.T9x.9x KJT9x.KTx.K8x.T8 A.8xx.Jxx.AQxxxx Q8x.AQx.AQxx.KJx 0.75\n",
-      "T9xx.QJxx.Axx.Jx Q8xx.9x.KTxx.KT9 A.8xx.Jxx.AQxxxx KJxx.AKTx.Q98.8x 0.74\n",
-      "QT9.T9x.KT9xx.8x K8xxx.AKxxx.AQ.9 A.8xx.Jxx.AQxxxx Jxxx.QJ.8xx.KJTx 0.72\n",
-      "QT98xx.ATx.KTx.J xx.QJxx.98xx.KT9 A.8xx.Jxx.AQxxxx KJxx.K9x.AQx.8xx 0.74\n",
-      "KQT8x.xx.9xx.T98 J9xx.AQJT.AKQx.J A.8xx.Jxx.AQxxxx xxx.K9xx.T8x.Kxx 0.75\n",
-      "Q98x.KJx.KQT9.JT KTxxx.AQxx.8xx.x A.8xx.Jxx.AQxxxx Jxx.T9x.Axx.K98x 0.74\n"
+      "J98x.JT9.QT98x.J QTx.AKQx.AKx.KTx A.8xx.Jxx.AQxxxx Kxxxx.xxx.xx.98x 0.75\n",
+      "Kxxx.J9x.QTx.K9x J8x.AQxx.K98x.Jx A.8xx.Jxx.AQxxxx QT9xx.KTx.Axx.T8 0.75\n",
+      "QTxx.K9x.xxxx.Jx J9xxx.QJT.AQT.KT A.8xx.Jxx.AQxxxx K8x.Axxx.K98.98x 0.75\n",
+      "98xx.J9x.QTx.T98 Txx.AQxxx.AKx.Jx A.8xx.Jxx.AQxxxx KQJxx.KT.98xx.Kx 0.75\n",
+      "Qxx.QJx.xxxx.J8x KT98.Kxx.KQT.KT9 A.8xx.Jxx.AQxxxx Jxxxx.AT9x.A98.x 0.75\n",
+      "Q8xxx.9x.8x.98xx Txx.AKTxx.AQx.KJ A.8xx.Jxx.AQxxxx KJ9x.QJx.KT9xx.T 0.78\n",
+      "QT9xx.K9.Q8x.JT9 K8xx.Axxx.KT9.Kx A.8xx.Jxx.AQxxxx Jxx.QJTx.Axxx.8x 0.75\n",
+      "J8xx.Jxx.Axxx.KJ KQxx.AKQx.Q98.T8 A.8xx.Jxx.AQxxxx T9xx.T9x.KTx.9xx 1.00\n",
+      "Qxx.A9xx.Q8x.Jxx KT9x.KQx.K9x.K98 A.8xx.Jxx.AQxxxx J8xxx.JTx.ATxx.T 0.75\n",
+      "98xx.K9x.9xx.JT9 KQTx.Tx.KQTx.K8x A.8xx.Jxx.AQxxxx Jxxx.AQJxx.A8x.x 0.75\n"
      ]
     }
    ],
