--- a/UCBC 2024/Simulations/Bidding4HX.ipynb
+++ b/UCBC 2024/Simulations/Bidding4HX.ipynb
@@ -28,7 +28,9 @@
    ],
    "source": [
     "import sys\n",
+    "import od\n",
     "sys.path.append('../../src')\n",
+    "os.environ['BEN_HOME'] = \"../..\"\n",
     "\n",
     "from nn.models import Models\n",
     "from bots import BotBid\n",
