--- a/UCBC 2024/Simulations/BiddingMichaels.ipynb
+++ b/UCBC 2024/Simulations/BiddingMichaels.ipynb
@@ -42,7 +42,9 @@
    ],
    "source": [
     "import sys\n",
+    "import os\n",
     "sys.path.append('../../src')\n",
+    "os.environ['BEN_HOME'] = \"../..\"\n",
     "\n",
     "from nn.models import Models\n",
     "from bots import BotBid\n",
