--- a/UCBC 2024/Simulations/OpeningLead6S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6S.ipynb
@@ -12,10 +12,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26570686",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -37,10 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c3397678",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n"
+     ]
+    }
+   ],
    "source": [
     "# both vulnerable. you are sitting South\n",
     "hand = '5.A97643.Q82.QJ5'\n",
@@ -50,16 +82,27 @@
     "\n",
     "# what to lead?\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, seat=2, verbose=False)\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, seat=2, dealer=3, verbose=False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a2b5fe25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "D2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lead.card"
    ]
@@ -76,10 +119,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "956ef356",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'card': 'Dx',\n",
+       "  'insta_score': 0.213,\n",
+       "  'expected_tricks_sd': 11.0,\n",
+       "  'p_make_contract': 0.9},\n",
+       " {'card': 'Sx',\n",
+       "  'insta_score': 0.12,\n",
+       "  'expected_tricks_sd': 11.0,\n",
+       "  'p_make_contract': 0.9},\n",
+       " {'card': 'CQ',\n",
+       "  'insta_score': 0.109,\n",
+       "  'expected_tricks_sd': 11.3,\n",
+       "  'p_make_contract': 0.6},\n",
+       " {'card': 'Hx',\n",
+       "  'insta_score': 0.192,\n",
+       "  'expected_tricks_sd': 11.4,\n",
+       "  'p_make_contract': 0.6},\n",
+       " {'card': 'Cx',\n",
+       "  'insta_score': 0.126,\n",
+       "  'expected_tricks_sd': 11.5,\n",
+       "  'p_make_contract': 0.4}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lead.to_dict()['candidates']"
    ]
