--- a/UCBC 2024/Simulations/BiddingPreference.ipynb
+++ b/UCBC 2024/Simulations/BiddingPreference.ipynb
@@ -18,7 +18,9 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import os\n",
     "sys.path.append('../../src')\n",
+    "os.environ['BEN_HOME'] = \"../..\"\n",
     "\n",
     "import os\n",
     "import logging\n",
