--- a/UCBC 2024/Simulations/CardByCardAnalysisBBO.ipynb
+++ b/UCBC 2024/Simulations/CardByCardAnalysisBBO.ipynb
@@ -56,14 +56,14 @@
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-950000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Board(dealer='S', vuln=[False, True], hands=['9872.A3.KJ973.53', 'J6AQ.8526.5.J24Q', 'KT4.J.Q86.AKT976', '53.KQT974.AT42.8'], auction=['1C', '2H', 'X', '4H', '4S', 'PASS', 'PASS', 'PASS'], play=['DA', 'D3', 'D5', 'D6', 'C8', 'C3', 'CJ', 'CA', 'S4', 'S5', 'S8', 'SJ', 'H5', 'HJ', 'HQ', 'HA', 'S2', 'SA', 'ST', 'S3', 'H2', 'SK', 'H4', 'H3', 'D8', 'D2', 'DJ', 'S6', 'SQ', 'C6', 'H7', 'S7', 'H8', 'C7', 'HK', 'S9', 'C5', 'C2', 'CT', 'HT', 'CK', 'H9', 'D7', 'C4', 'DQ', 'D4', 'DK', 'H6', 'D9', 'CQ', 'C9', 'DT'])\n"
+      "Board(dealer='S', vuln=[False, True], hands=['9872.A3.KJ973.53', 'AQJ6.5826.5.4Q2J', 'KT4.J.Q86.AKT976', '53.KQT974.AT42.8'], auction=['1C', '2H', 'X', '4H', '4S', 'PASS', 'PASS', 'PASS'], play=['DA', 'D3', 'D5', 'D6', 'C8', 'C3', 'CJ', 'CA', 'S4', 'S5', 'S8', 'SJ', 'H5', 'HJ', 'HQ', 'HA', 'S2', 'SA', 'ST', 'S3', 'H2', 'SK', 'H4', 'H3', 'D8', 'D2', 'DJ', 'S6', 'SQ', 'C6', 'H7', 'S7', 'H8', 'C7', 'HK', 'S9', 'C5', 'C2', 'CT', 'HT', 'CK', 'H9', 'D7', 'C4', 'DQ', 'D4', 'DK', 'H6', 'D9', 'CQ', 'C9', 'DT'])\n"
      ]
     }
    ],
@@ -159,6 +159,13 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1C OK NN-value: 1.000\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -169,35 +176,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X Suggested bid from NN: CandidateBid(bid=3H  , insta_score=0.3398, expected_score=429.30, adjust=  17)\n",
-      "X is not in the bids from the neural network\n",
-      "4H Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.1076, expected_score=-301.90, adjust=   5)\n",
-      "4H NN-values:CandidateBid(bid=4H  , insta_score=0.4577, expected_score=-344.38, adjust=  23)\n",
-      "4S Suggested bid from NN: CandidateBid(bid=X   , insta_score=0.1381, expected_score=417.30, adjust=   7)\n",
-      "4S NN-values:CandidateBid(bid=4S  , insta_score=0.1158, expected_score=338.95, adjust=   6)\n",
-      "PASS Suggested bid from NN: CandidateBid(bid=X   , insta_score=0.1636, expected_score=46.11, adjust=   8)\n",
-      "PASS NN-values:CandidateBid(bid=PASS, insta_score=0.3877, expected_score=14.44, adjust=  19)\n",
-      "PASS OK NN-value: 0.462\n",
-      "PASS Suggested bid from NN: CandidateBid(bid=5H  , insta_score=0.4640, expected_score=-383.33, adjust=  23)\n",
-      "PASS NN-values:CandidateBid(bid=PASS, insta_score=0.5251, expected_score=-461.85, adjust=  26)\n",
+      "2H OK NN-value: 0.845\n",
+      "X Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.5855, expected_score=61.35, adjust=  29)\n",
+      "X NN-values:CandidateBid(bid=X   , insta_score=0.4109, expected_score=17.55, adjust=  21)\n",
+      "4H OK NN-value: 0.431\n",
+      "4S Suggested bid from NN: CandidateBid(bid=X   , insta_score=0.3774, expected_score=631.00, adjust=  19)\n",
+      "4S is not in the bids from the neural network\n",
+      "PASS OK NN-value: 0.953\n",
+      "PASS OK NN-value: 0.939\n",
+      "PASS OK NN-value: 0.687\n",
       "analyzing opening lead\n",
       "DA\n",
       "DA OK\n",
-      "analyzing play\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'set_card_played'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m card_by_card\u001b[38;5;241m.\u001b[39manalyze()\n",
-      "File \u001b[1;32md:\\github\\ben\\UCBC 2024\\Simulations\\../../src\\analysis.py:34\u001b[0m, in \u001b[0;36mCardByCard.analyze\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39manalyze_opening_lead()\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manalyzing play\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 34\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39manalyze_play()\n",
-      "File \u001b[1;32md:\\github\\ben\\UCBC 2024\\Simulations\\../../src\\analysis.py:131\u001b[0m, in \u001b[0;36mCardByCard.analyze_play\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m trick_i \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m player_i \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    130\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, card_player \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(card_players):\n\u001b[1;32m--> 131\u001b[0m         \u001b[43mcard_player\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_real_card_played\u001b[49m\u001b[43m(\u001b[49m\u001b[43mopening_lead52\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m    132\u001b[0m         card_player\u001b[38;5;241m.\u001b[39mset_card_played(trick_i\u001b[38;5;241m=\u001b[39mtrick_i, leader_i\u001b[38;5;241m=\u001b[39mleader_i, i\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, card\u001b[38;5;241m=\u001b[39mopening_lead)\n\u001b[0;32m    133\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
-      "File \u001b[1;32md:\\github\\ben\\UCBC 2024\\Simulations\\../../src\\bots.py:870\u001b[0m, in \u001b[0;36mCardPlayer.set_real_card_played\u001b[1;34m(self, card, playedBy, openinglead)\u001b[0m\n\u001b[0;32m    868\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mset_real_card_played\u001b[39m(\u001b[38;5;28mself\u001b[39m, card, playedBy, openinglead\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m    869\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mplayer_i \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m3\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodels\u001b[38;5;241m.\u001b[39mpimc_use:\n\u001b[1;32m--> 870\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpimc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_card_played\u001b[49m(card, playedBy, openinglead)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'set_card_played'"
+      "analyzing play\n",
+      "D3 OK\n",
+      "D5 OK\n",
+      "D6 OK\n",
+      "C8 OK\n",
+      "C3 OK\n",
+      "CJ ? losing: 0.43\n",
+      "CA OK\n",
+      "S4 OK\n",
+      "S5 OK\n",
+      "S8 OK\n",
+      "SJ OK\n",
+      "H5 OK\n",
+      "HJ OK\n",
+      "HQ OK\n",
+      "HA OK\n",
+      "S2 ? losing: 0.28\n",
+      "SA OK\n",
+      "ST OK\n",
+      "S3 OK\n",
+      "H2 OK\n",
+      "SK OK\n",
+      "H4 OK\n",
+      "H3 OK\n",
+      "D8 OK\n",
+      "D2 OK\n",
+      "DJ OK\n",
+      "S6 OK\n",
+      "SQ OK\n",
+      "C6 OK\n",
+      "H7 OK\n",
+      "S7 OK\n",
+      "H8 OK\n",
+      "C7 OK\n",
+      "HK OK\n",
+      "S9 OK\n",
+      "C5 OK\n",
+      "C2 OK\n",
+      "CT OK\n",
+      "HT OK\n",
+      "CK OK\n",
+      "H9 OK\n",
+      "D7 OK\n",
+      "C4 OK\n",
+      "DQ OK\n",
+      "D4 OK\n",
+      "DK OK\n",
+      "H6 OK\n"
      ]
     }
    ],
@@ -217,10 +255,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d79d9389",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'card': 'CQ',\n",
+       " 'hcp': [7.3, 12.6],\n",
+       " 'shape': [1.1, 6.1, 4.0, 1.9, 3.8, 1.4, 2.9, 5.0],\n",
+       " 'candidates': [{'card': 'CQ',\n",
+       "   'insta_score': 0.399,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'H2',\n",
+       "   'insta_score': 0.197,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'H6',\n",
+       "   'insta_score': 0.197,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'H5',\n",
+       "   'insta_score': 0.197,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'C2',\n",
+       "   'insta_score': 0.15,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'C4',\n",
+       "   'insta_score': 0.15,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'H8',\n",
+       "   'insta_score': 0.197,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'SA',\n",
+       "   'insta_score': 0.124,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'SJ',\n",
+       "   'insta_score': 0.008,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'CJ',\n",
+       "   'insta_score': 0.0,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50},\n",
+       "  {'card': 'SQ',\n",
+       "   'insta_score': 0.0,\n",
+       "   'expected_tricks_dd': 2.0,\n",
+       "   'p_make_contract': 1.0,\n",
+       "   'expected_score_dd': 50}],\n",
+       " 'samples': ['x.QJT9xx.ATxx.T9 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.Q8x.AK8xx 0.59581',\n",
+       "  'x.QJT9xx.ATxx.Tx 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.Q8x.AK98x 0.59075',\n",
+       "  'T.KJT9xx.AQTxx.x 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx Kxxx.Q.8x.AKT98x 0.58726',\n",
+       "  'T.KJT9xx.AQTxx.9 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx Kxxx.Q.8x.AKT8xx 0.58519',\n",
+       "  'x.KJT9xx.AQTxx.9 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.Q.8x.AKT8xx 0.57328',\n",
+       "  'x.KJT9xx.AQTxx.x 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.Q.8x.AKT98x 0.56912',\n",
+       "  'x.KJT9xx.ATxx.8x 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.Q.Q8x.AKT9x 0.48297',\n",
+       "  'T.KJT9xx.ATxx.xx 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx Kxxx.Q.Q8x.AKT98 0.47158',\n",
+       "  'x.QJT9xx.AQTx.T9 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.8xx.AK8xx 0.44880',\n",
+       "  'x.QJT9xx.AQxx.T8 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.T8x.AK9xx 0.44773',\n",
+       "  'x.QJT9xx.AQTx.8x 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.8xx.AKT9x 0.44840',\n",
+       "  'T.QJT9xx.AQTx.8x 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx Kxxx.K.8xx.AKT9x 0.44718',\n",
+       "  'x.QJT9xx.AQTx.Tx 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.8xx.AK98x 0.44665',\n",
+       "  'T.QJT9xx.AQxx.T9 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx Kxxx.K.T8x.AK8xx 0.44583',\n",
+       "  'x.QJT9xx.AQxx.T9 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.T8x.AK8xx 0.44584',\n",
+       "  'T.QJT9xx.AQxx.Tx 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx Kxxx.K.T8x.AK98x 0.44396',\n",
+       "  'x.QJT9xx.AQTx.9x 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.8xx.AKT8x 0.44417',\n",
+       "  'x.QJT9xx.AQxx.Tx 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.T8x.AK98x 0.44396',\n",
+       "  'T.QJT9xx.AQTx.9x 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx Kxxx.K.8xx.AKT8x 0.44281',\n",
+       "  'x.QJT9xx.AQxx.8x 98xx.Ax.KJ9xx.xx AQJx.8xxx.x.QJxx KTxx.K.T8x.AKT9x 0.44317']}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "card_by_card.cards['S4'].to_dict()"
    ]
@@ -235,21 +361,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "00c728a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'card': 'DA',\n",
+       " 'quality': 'Good',\n",
+       " 'hcp': [4.2, 1.8, 3.5, 3.5, 2.6, 4.2, 3.0, 3.0, 4.1, 1.4, 2.4, 5.1],\n",
+       " 'shape': [10.8, 7.0, 13.3],\n",
+       " 'candidates': [{'card': 'C8',\n",
+       "   'insta_score': 0.109,\n",
+       "   'expected_tricks_sd': 11.66,\n",
+       "   'p_make_contract': 0.08},\n",
+       "  {'card': 'Hx',\n",
+       "   'insta_score': 0.238,\n",
+       "   'expected_tricks_sd': 11.78,\n",
+       "   'p_make_contract': 0.02},\n",
+       "  {'card': 'HK',\n",
+       "   'insta_score': 0.23,\n",
+       "   'expected_tricks_sd': 11.77,\n",
+       "   'p_make_contract': 0.02},\n",
+       "  {'card': 'Dx',\n",
+       "   'insta_score': 0.102,\n",
+       "   'expected_tricks_sd': 12.09,\n",
+       "   'p_make_contract': 0.02}],\n",
+       " 'samples': ['xx.KQT9xx.ATxx.8 QT8xx.x.KQxx.Kxx x.AJ8xxx.Jxx.J9x AKJ9x..98.AQTxxx 0.79423',\n",
+       "  'xx.KQT9xx.ATxx.8 AJxxx.J.KJ9xx.xx x.A8xxx.Qxx.QT9x KQT98.x.8.AKJxxx 0.77794',\n",
+       "  'xx.KQT9xx.ATxx.8 J98xx.A8.K8xx.Qx x.Jxxxx.Q9x.A9xx AKQTx..Jx.KJTxxx 0.77758',\n",
+       "  'xx.KQT9xx.ATxx.8 K9xxx.x.K8xx.AJx x.AJ8xxx.QJx.xxx AQJT8..9x.KQT9xx 0.77259',\n",
+       "  'xx.KQT9xx.ATxx.8 KQ8xx.J.KQxx.Txx J.A8xxxx.J8x.Qxx AT9xx..9x.AKJ9xx 0.77076',\n",
+       "  'xx.KQT9xx.ATxx.8 A9xxx.A8.xxx.QJx x.Jxxxx.Q98x.ATx KQJT8..KJ.K9xxxx 0.76874',\n",
+       "  'xx.KQT9xx.ATxx.8 KJ9xx.A.J98xx.J9 T.J8xxx.Kxx.Kxxx AQ8xx.x.Q.AQTxxx 0.76856',\n",
+       "  'xx.KQT9xx.ATxx.8 QJ8xx.x.QJ8x.KQx 9.AJ8xx.9xxx.JTx AKTxx.x.K.A9xxxx 0.76726',\n",
+       "  'xx.KQT9xx.ATxx.8 KQTxx.AJ.xxx.9xx 8.8xxxx.QJ9x.KQx AJ9xx..K8.AJTxxx 0.76680',\n",
+       "  'xx.KQT9xx.ATxx.8 A9xxx.8.KQ8x.Jxx J.AJxxx.J9xx.9xx KQT8x.x.x.AKQTxx 0.76509',\n",
+       "  'xx.KQT9xx.ATxx.8 QJT9x.Jx.QJx.Axx x.A8xxx.98xx.KJ9 AK8xx..Kx.QTxxxx 0.76220',\n",
+       "  'xx.KQT9xx.ATxx.8 AT98x.8.Jxxx.Axx x.Jxxxx.KQ98.Qxx KQJxx.A.x.KJT9xx 0.76139',\n",
+       "  'xx.KQT9xx.ATxx.8 KTxxx.xx.K8xx.KJ 8.AJ8xx.QJ9x.9xx AQJ9x..x.AQTxxxx 0.76044',\n",
+       "  'xx.KQT9xx.ATxx.8 AJTxx.x.Q9xx.K9x x.AJxxx.J8xx.Txx KQ98x.8.K.AQJxxx 0.76022',\n",
+       "  'xx.KQT9xx.ATxx.8 AKQxx.8x.J9xx.Qx x.AJxxx.Qxx.JTxx JT98x..K8.AK9xxx 0.75930',\n",
+       "  'xx.KQT9xx.ATxx.8 KQT8x.Ax.xx.JTxx x.J8xxx.KQJ9x.xx AJ9xx..8x.AKQ9xx 0.75799',\n",
+       "  'xx.KQT9xx.ATxx.8 KJT9.J.KJ98xx.Kx xxx.A8xxxx.x.QTx AQ8x..Qx.AJ9xxxx 0.75699',\n",
+       "  'xx.KQT9xx.ATxx.8 AK9xx.x.KJ8xxx.T J.J8xxx.9x.A9xxx QT8xx.A.Q.KQJxxx 0.75618',\n",
+       "  'xx.KQT9xx.ATxx.8 KJ9x.J.QJ98x.QTx 8xx.A8xxxx.x.9xx AQTx..Kxx.AKJxxx 0.75421',\n",
+       "  'xx.KQT9xx.ATxx.8 QJT9x.A.J8xx.ATx x.J8xxxx.KQ9.9xx AK8xx..xx.KQJxxx 0.75358']}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "card_by_card.cards['DA'].to_dict()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e55103f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
