--- a/UCBC 2024/Simulations/OpeningLead4H.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead4H.ipynb
@@ -51,14 +51,14 @@
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-950000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "H5"
+       "D3"
       ]
      },
      "execution_count": 4,
@@ -134,22 +134,22 @@
     {
      "data": {
       "text/plain": [
-       "[{'card': 'Hx',\n",
-       "  'insta_score': 0.124,\n",
-       "  'expected_tricks_sd': 4.5,\n",
-       "  'p_make_contract': 1.0},\n",
+       "[{'card': 'Dx',\n",
+       "  'insta_score': 0.153,\n",
+       "  'expected_tricks_sd': 10.1,\n",
+       "  'p_make_contract': 0.2},\n",
        " {'card': 'Cx',\n",
        "  'insta_score': 0.162,\n",
-       "  'expected_tricks_sd': 4.7,\n",
-       "  'p_make_contract': 1.0},\n",
+       "  'expected_tricks_sd': 10.2,\n",
+       "  'p_make_contract': 0.2},\n",
+       " {'card': 'Hx',\n",
+       "  'insta_score': 0.124,\n",
+       "  'expected_tricks_sd': 10.5,\n",
+       "  'p_make_contract': 0.1},\n",
        " {'card': 'Sx',\n",
        "  'insta_score': 0.215,\n",
-       "  'expected_tricks_sd': 4.8,\n",
-       "  'p_make_contract': 1.0},\n",
-       " {'card': 'Dx',\n",
-       "  'insta_score': 0.153,\n",
-       "  'expected_tricks_sd': 4.8,\n",
-       "  'p_make_contract': 1.0}]"
+       "  'expected_tricks_sd': 11.0,\n",
+       "  'p_make_contract': 0.0}]"
       ]
      },
      "execution_count": 5,
@@ -183,16 +183,16 @@
     {
      "data": {
       "text/plain": [
-       "['AT8xx.Tx.Ax.8xxx J9x.xx.KJxxx.AQx Qx.AKQJx.8xx.K9x Kxx.98xx.QT9.JTx 0.53544',\n",
-       " 'AT8xx.Tx.Ax.8xxx Jxx.8x.QJT8x.AQx K9x.AQxxx.Kx.KTx Qx.KJ9x.9xxx.J9x 0.53249',\n",
-       " 'AT8xx.Tx.Ax.8xxx 9x.AQ.J98xx.KJ9x KQJx.KJxx.KTx.QT xx.98xxx.Qxx.Axx 0.53199',\n",
-       " 'AT8xx.Tx.Ax.8xxx 9.Q8xx.QJTxx.KQ9 Kx.AKJ9x.8xx.Axx QJxxx.xx.K9x.JTx 0.52890',\n",
-       " 'AT8xx.Tx.Ax.8xxx xx.Q8x.QJ98x.KQT KJ.KJ9xx.Kxx.Axx Q9xx.Axx.Txx.J9x 0.52733',\n",
-       " 'AT8xx.Tx.Ax.8xxx .Q9x.Txxxx.AKJxx KQxx.KJ8x.KJx.Q9 J9xx.Axxx.Q98.Tx 0.52619',\n",
-       " 'AT8xx.Tx.Ax.8xxx Qxx.A8x.KJ9xx.J9 KJx.KQJxx.QT.KTx 9x.9xx.8xxx.AQxx 0.52432',\n",
-       " 'AT8xx.Tx.Ax.8xxx Q.Jxxx.KTxxx.ATx K9x.KQ8xx.Q9.KQx Jxxx.A9.J8xx.J9x 0.52364',\n",
-       " 'AT8xx.Tx.Ax.8xxx Jx.Ax.Q98xx.KJxx K9x.KQ98x.Jxx.AQ Qxx.Jxxx.KTx.T9x 0.52248',\n",
-       " 'AT8xx.Tx.Ax.8xxx x.J9xx.KJ9xx.KJx KQJ9.KQ8x.Q8x.QT xxx.Axx.Txx.A9xx 0.52202']"
+       "['AT8xx.Tx.Ax.8xxx x.KJ98xx.KJx.Txx 9xx.xxx.QT8xx.AJ KQJx.AQ.9xx.KQ9x 0.68581',\n",
+       " 'AT8xx.Tx.Ax.8xxx J9x.QJ8xxx.9.KJx Qxx.9x.KT8xx.QTx Kx.AKx.QJxxx.A9x 0.68210',\n",
+       " 'AT8xx.Tx.Ax.8xxx x.KQJ98xxx.8.Q9x 9xxx.x.KQTxx.KJx KQJ.Ax.J9xxx.ATx 0.67324',\n",
+       " 'AT8xx.Tx.Ax.8xxx KQx.QJxxxxx.T.Tx xx.98.QJ8xx.KJxx J9x.AK.K9xxx.AQ9 0.66772',\n",
+       " 'AT8xx.Tx.Ax.8xxx x.KQ98xxx.QJx.9x 9x.x.KTxxx.AQTxx KQJxx.AJx.98x.KJ 0.66607',\n",
+       " 'AT8xx.Tx.Ax.8xxx J.Q98xxxx.Tx.KQT Q9xx.Kx.K98xx.9x Kxx.AJ.QJxx.AJxx 0.66602',\n",
+       " 'AT8xx.Tx.Ax.8xxx Qx.KJ98xxxx.Q.Tx KJ9x..KT98xx.Qxx xx.AQx.Jxxx.AKJ9 0.66499',\n",
+       " 'AT8xx.Tx.Ax.8xxx xx.AQ98xxx.8x.Qx Qxx.KJ.K9xxx.T9x KJ9.xx.QJTx.AKJx 0.66436',\n",
+       " 'AT8xx.Tx.Ax.8xxx K.K8xxxxx.xx.Q9x 9xxx.9.KQJT98.KT QJx.AQJ.xxx.AJxx 0.66378',\n",
+       " 'AT8xx.Tx.Ax.8xxx Q9.K98xxxx.Jx.Qx Jx.AJ.Q8xxx.K9xx Kxxx.Qx.KT9x.AJT 0.66352']"
       ]
      },
      "execution_count": 6,
