--- a/UCBC 2024/Simulations/OpeningLead4S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead4S.ipynb
@@ -15,17 +15,7 @@
    "execution_count": 1,
    "id": "26570686",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "non-resource variables are not supported in the long term\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -52,20 +42,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-950000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
      ]
     }
    ],
@@ -76,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c3397678",
    "metadata": {},
    "outputs": [
@@ -89,30 +82,24 @@
       "Cx 0.368\n",
       "Hx 0.254\n",
       "Dx 0.251\n",
+      "Sx 0.107\n",
       "Now generating 50000 deals to find opening lead\n",
       "sample_cards_auction, nsteps= 3\n",
       "NS:  1.0 EW:  99.0 Auction:  ['PASS', '1C', '1S', 'PASS', '3C', 'PASS', '4S', 'PASS', 'PASS', 'PASS']\n",
       "nesw_i 3\n",
+      "bids in model 3\n",
       "Player:  W Hand:  x.J9xx.8xxx.J9xx\n",
       "HCP:  [[ 8.6  13.4  13.85]]\n",
       "Shape:  [[4.27 3.46 3.4  1.79 2.35 3.13 3.28 4.35 5.12 2.76 2.58 2.49]]\n",
       "sample_cards_vec generating 50000\n",
-      "sample_cards_vec took 1.014 Deals: 37224\n",
+      "sample_cards_vec took 1.075 Deals: 37224\n",
       "n_samples 37224 matching bidding info\n",
       "Samples after bidding filtering:  17  Threshold:  0.7\n",
       "Generated samples: 17  OK Quality True\n",
-      "Now simulate on 100 deals to find opening lead\n",
+      "Now simulate on 200 deals to find opening lead\n",
       "Opening lead being examined:  C5 17\n",
-      "dds took 0.039\n",
-      "Opening lead being examined:  H5 17\n",
-      "dds took 0.06297\n",
-      "Opening lead being examined:  D6 17\n",
-      "dds took 0.04503\n",
-      "True\n",
-      "CandidateCard(card=Hx, insta_score=0.2544, exp_tricks_sd=11.176470588235293, exp_tricks_dd=None, p_make_contract=0.058823529411764705, exp_score_sd=None, exp_score_dd=None)\n",
-      "CandidateCard(card=Dx, insta_score=0.2508, exp_tricks_sd=11.294117647058824, exp_tricks_dd=None, p_make_contract=0.058823529411764705, exp_score_sd=None, exp_score_dd=None)\n",
-      "CandidateCard(card=Cx, insta_score=0.3683, exp_tricks_sd=11.235294117647058, exp_tricks_dd=None, p_make_contract=0.0, exp_score_sd=None, exp_score_dd=None)\n",
-      "Accepted samples for opening lead: 17\n"
+      "dds took 0.04899\n",
+      "Opening lead being examined:  H5 17\n"
      ]
     },
     {
@@ -120,6 +107,23 @@
      "output_type": "stream",
      "text": [
       "Loaded lib dds.dll\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dds took 0.076\n",
+      "Opening lead being examined:  D6 17\n",
+      "dds took 0.05699\n",
+      "Opening lead being examined:  S4 17\n",
+      "dds took 0.09299\n",
+      "True\n",
+      "CandidateCard(card=Hx, insta_score=0.2544, exp_tricks_sd=11.176470588235293, exp_tricks_dd=None, p_make_contract=0.058823529411764705, exp_score_sd=None, exp_score_dd=None), msg=None\n",
+      "CandidateCard(card=Dx, insta_score=0.2508, exp_tricks_sd=11.294117647058824, exp_tricks_dd=None, p_make_contract=0.058823529411764705, exp_score_sd=None, exp_score_dd=None), msg=None\n",
+      "CandidateCard(card=Cx, insta_score=0.3683, exp_tricks_sd=11.235294117647058, exp_tricks_dd=None, p_make_contract=0.0, exp_score_sd=None, exp_score_dd=None), msg=None\n",
+      "CandidateCard(card=Sx, insta_score=0.1073, exp_tricks_sd=11.235294117647058, exp_tricks_dd=None, p_make_contract=0.0, exp_score_sd=None, exp_score_dd=None), msg=None\n",
+      "Accepted samples for opening lead: 17\n"
      ]
     }
    ],
@@ -133,13 +137,13 @@
     "\n",
     "# what to lead?\n",
     "\n",
-    "lead_bot = BotLead([True, False], hand, models, sampler, seat, True)\n",
+    "lead_bot = BotLead([True, False], hand, models, sampler, seat, 0, True)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a2b5fe25",
    "metadata": {},
    "outputs": [
@@ -149,7 +153,7 @@
        "H5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "956ef356",
    "metadata": {},
    "outputs": [
@@ -188,10 +192,14 @@
        " {'card': 'Cx',\n",
        "  'insta_score': 0.368,\n",
        "  'expected_tricks_sd': 11.24,\n",
+       "  'p_make_contract': 0.0},\n",
+       " {'card': 'Sx',\n",
+       "  'insta_score': 0.107,\n",
+       "  'expected_tricks_sd': 11.24,\n",
        "  'p_make_contract': 0.0}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7cb2bf98",
    "metadata": {},
    "outputs": [
@@ -241,7 +249,7 @@
        " 'x.J9xx.8xxx.J9xx QJ9xx.T8xx.AQx.x Kxx.Kxx.JTx.KQ8x AT8x.AQ.K9x.ATxx 0.70133']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
